<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bignerranch.android.personaltrainerassistant2.MakeNewCustomer"
    tools:showIn="@layout/activity_make_new_session">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Customer Name: "
        android:ems="10"
        android:id="@+id/cust_nme"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/current_customer_name"
        android:id="@+id/current_customer_name"
        android:layout_below="@+id/cust_nme"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:text="@string/session_date"
        android:ems="10"
        android:id="@+id/session_date"
        android:layout_below="@+id/current_customer_name"
       />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:text="@string/session_start_time"
        android:id="@+id/session_start_time"
        android:layout_below="@+id/session_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:text="@string/session_end_time"
        android:id="@+id/session_end_time"
        android:layout_below="@+id/session_start_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_customer_photo"
        android:background="@drawable/empty_profile_picture_male"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/session_end_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/new_session_submit_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        style="?android:attr/buttonBarButtonStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/session_description"
        android:background="@color/opaque_60_white"
        android:id="@+id/session_description"
        android:layout_below="@+id/session_end_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
